Referenciando botoes e iniciando dashboard

--- a/web-data-viz/site/public/css/Quem-somos-nos.css
+++ b/web-data-viz/site/public/css/Quem-somos-nos.css
@@ -40,6 +40,7 @@ a {
     justify-content: space-around;
     color: rgb(250, 250, 250);
     list-style: none;
+    transform: translate(210px);
 }
 
 /*------------------------------------------------------------------------------------------------------INICIO DO CARROSSEL --------------------------------------------------------------------------------------------------------------------------*/
