--- a/web-data-viz/site/public/css/cadastro.css
+++ b/web-data-viz/site/public/css/cadastro.css
@@ -52,6 +52,7 @@ a {
     justify-content: space-around;
     color: rgb(250, 250, 250);
     list-style: none;
+    transform: translate(210px);
 }
 
 .banner {
@@ -116,7 +117,7 @@ a {
     border-radius: 10px;
     font-size: 20px;
     width: 120px;
-    align-self: center;
+    transform: translate(45px);
 }
 .footer{
     padding: 25px;
@@ -127,6 +128,7 @@ a {
     color: #fff;
     display: flex;
     border-bottom: solid red 4px;
+    text-align: center;
 }
 
 .footer .container{
