--- a/web-data-viz/site/public/css/Quem-somos-nos.css
+++ b/web-data-viz/site/public/css/Quem-somos-nos.css
@@ -1,16 +1,21 @@
 body {
-    margin: 0;
+    margin: auto;
     font-family: sans-serif;
-    background-color: rgb(0, 0, 0);
+    background-image: url(assets-css/202200908_rummens_SPFCxATLETICOGO_3216_-scaled.jpg);
+    background-position: center ;
+    background-size: cover;
 }
 
 .header {
     color: rgb(250, 250, 250);
-    border-bottom: solid 3px rgb(250, 250, 250);
+    border-bottom: solid 3px rgb(250, 0, 0);
     font-weight: bold;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.90;
 }
 
 .container {
+    padding: 30px;
     margin: auto;
     width: 80%;
     margin: auto;
@@ -18,7 +23,7 @@ body {
 }
 
 .header .container {
-    margin: auto;
+    margin: ato;
     display: flex;
 }
 
@@ -34,6 +39,7 @@ a {
 }
 
 .navbar {
+    padding: 30px;
     margin: auto;
     display: flex;
     width: 600px;
@@ -43,13 +49,18 @@ a {
     transform: translate(210px);
 }
 
-/*------------------------------------------------------------------------------------------------------INICIO DO CARROSSEL --------------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------INICIO DO CARROSSEL ----------------------------------------------------*/
+
+
 .banner {
+    padding: 30px;
     height: 500px;
-    /* border: 2px solid yellow; */
+    border: 2px solid red;
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.90;
 }
 
 .carrossel {
@@ -105,8 +116,10 @@ a {
 }
 
 .slide img {
-    width: 100%;
+    width: 55%;
     height: 100%;
+    border-radius: 10px;
+    transform: translate(350px);
 }
 
 #slide1:checked~.s1 {
@@ -149,6 +162,89 @@ a {
     margin-left: -1.8%;
 }
 
+
+/*-----------------------------------------------------Fim do Carrosel----------------------------------------------------------------*/
+
+
+/*------------------------------------------------------Inicio Historia SPFC---------------------------------------------------------*/
+
+.containerHC .historiaClube {
+    width: 100%;
+    display: flex;
+    height: 300px;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.90;
+    border: solid 3px rgb(255, 0, 0);
+}
+
+.historiaClube h1 {
+    font-size: 38px;
+    color: red;
+    margin: auto;
+}
+
+/*-----------------------------------------------------Fim Historia SPFC------------------------------------------------------------*/
+
+
+/*---------------------------------------------------------Inicio Idolos--------------------------------------------------------------*/
+
+.idolos .container .boxes {
+    margin: auto;
+    display: flex;
+   
+}
+
+.idolos {
+    margin: auto;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.90;
+    padding: 30px;
+}
+
+.idolos b{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+}
+
+
+.idolos p{
+    font-size: larger;
+}
+
+.titulo {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+
+.boxes h1 {
+    display: block;
+    align-items: center;
+    text-align: center;
+}
+
+.box img {
+    width: 170px;
+    border: outset rgb(0, 0, 0) 2px;
+}
+
+
+.box {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.idolos p {
+    text-align: center;
+}
+/*---------------------------------------------------------Fim Idolos-----------------------------------------------------------------*/
+
+
+/*---------------------------------------------------------Inicio Footer--------------------------------------------------------------*/
+
+
 .footer {
     margin: auto;
     background-image: url(assets-css/202200908_rummens_SPFCxATLETICOGO_3216_-scaled.jpg);
@@ -162,3 +258,5 @@ a {
     display: flex;
     justify-content: center;
 }
+
+/*--------------------------------------------------------Fim do Footer----------------------------------------------------------------*/
