--- a/web-data-viz/site/public/css/Quem-somos-nos.css
+++ b/web-data-viz/site/public/css/Quem-somos-nos.css
@@ -3,7 +3,8 @@ body {
     font-family: sans-serif;
     background-image: url(assets-css/202200908_rummens_SPFCxATLETICOGO_3216_-scaled.jpg);
     background-position: center ;
-    background-size: cover;
+    background-size: cover; 
+    width: 100%;
 }
 
 .header {
@@ -67,6 +68,7 @@ a {
     /* border: 2px solid blue; */
     border-radius: 20px;
     overflow: hidden;
+    
     /*define onde eu quero colocar o meu elemento na tela */
     /* move o conteudo no seu próprio eixo */
     /*eixo x deitado, eixo y em pé */
@@ -168,75 +170,187 @@ a {
 
 /*------------------------------------------------------Inicio Historia SPFC---------------------------------------------------------*/
 
-.containerHC .historiaClube {
+.containerHC {
     width: 100%;
     display: flex;
-    height: 300px;
+    height: auto;
+    width: auto;
     background-color: rgb(0, 0, 0);
     opacity: 0.90;
     border: solid 3px rgb(255, 0, 0);
-}
-
-.historiaClube h1 {
-    font-size: 38px;
-    color: red;
+    flex-direction: column;
     margin: auto;
 }
 
+
+
+
+.conteudo {
+    display: flex;
+    height: 1000px;
+    margin: 0;
+}
+.titulo h1 {
+    padding: 15px;
+    font-size: 38px;
+    color: red;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.conteudo p{
+    color: rgb(250, 0, 0);
+    text-align: center;
+    padding: 15px
+}
+
+.imgTime1 {
+    display: flex;
+    height: 250px;
+    padding: 10px;
+}
+
+.imgTime2   {
+    display: flex;
+    height: 250px;
+    padding: 10px;
+    position: absolute;
+    top:1046px;
+}
+.imgTime3   {
+    display: flex;
+    height: 250px;
+    padding: 10px;   
+}
+.imgTime4   {
+    display: flex;
+    height: 250px;
+    padding: 10px;
+    position: absolute;
+    top:1046px;
+    right:3px;
+}
+
+.imgTime5   {
+    display: flex;
+    height: 250px;
+    padding: 10px;
+    position: absolute;
+    top:1320px;
+}
 /*-----------------------------------------------------Fim Historia SPFC------------------------------------------------------------*/
 
 
 /*---------------------------------------------------------Inicio Idolos--------------------------------------------------------------*/
 
-.idolos .container .boxes {
-    margin: auto;
-    display: flex;
-   
-}
 
-.idolos {
-    margin: auto;
+.containerIdolos {
+    width: 100%;
+    display: flex;
+    height: auto;
     background-color: rgb(0, 0, 0);
     opacity: 0.90;
-    padding: 30px;
+    border: solid 3px rgb(255, 0, 0);
+    flex-direction: column;
 }
 
-.idolos b{
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-}
-
-
-.idolos p{
-    font-size: larger;
-}
-
-.titulo {
+.tituloIdolos h1 {
+    padding: 15px;
+    font-size: 38px;
+    color: red;
+    margin: auto;
     display: flex;
     justify-content: center;
-    padding-bottom: 50px;
 }
 
-.boxes h1 {
-    display: block;
+.rogerioceni {
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+}
+
+.tituloRC{
+    display: flex;
+    color: red;
     align-items: center;
+    flex-direction: column
+}
+
+.imgRC{
+    display: flex;
+    border: solid red;
+    justify-content: center;;
+}
+
+.imgRC img{
+    height: 195px;
+    justify-content: center;
+}
+
+.rogerioceni p{
+    color: red;
     text-align: center;
 }
 
-.box img {
-    width: 170px;
-    border: outset rgb(0, 0, 0) 2px;
-}
 
-
-.box {
-    margin: auto;
+.rai {
     display: flex;
+    margin: 0;
     flex-direction: column;
-    align-items: center;
 }
 
-.idolos p {
+.tituloRai{
+    display: flex;
+    color: red;
+    align-items: center;
+    flex-direction: column
+}
+
+.imgRai{
+    display: flex;
+    border: solid red;
+    justify-content: center;;
+}
+
+.imgRai img{
+    height: 195px;
+    width: 150px;
+    justify-content: center;
+}
+
+.rai p{
+    color: red;
+    text-align: center;
+}
+
+.serginhochulapa {
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+}
+
+.tituloSerginho{
+    display: flex;
+    color: red;
+    align-items: center;
+    flex-direction: column
+}
+
+.imgSerginho{
+    display: flex;
+    border: solid red;
+    justify-content: center;;
+}
+
+.imgSerginho img{
+    height: 195px;
+    width: 150px;
+    justify-content: center;
+}
+
+.serginhochulapa p{
+    color: red;
     text-align: center;
 }
 /*---------------------------------------------------------Fim Idolos-----------------------------------------------------------------*/
@@ -246,7 +360,7 @@ a {
 
 
 .footer {
-    margin: auto;
+    margin: 0;
     background-image: url(assets-css/202200908_rummens_SPFCxATLETICOGO_3216_-scaled.jpg);
     height: 150px;
     color: #fff;
