--- a/site/public/css/resultados.css
+++ b/site/public/css/resultados.css
@@ -47,7 +47,38 @@ a {
     transform: translate(210px);
 }
 
+.div-results{
+    height: 700px;
+    color: white;
+    opacity: 0.90;
+    display: flex;
+    justify-content: center;
+    
+}
 
+.caixa-rank{
+    margin-top: 10%;
+     display: flex;
+    height: 50%;
+    width: 40%;
+    background-color: ghostwhite;
+    opacity: 0.9;
+    border: 5px solid rgb(0, 0, 0);
+    flex-direction: column;
+    align-items: center;
+    color: black;
+    border-radius: 16px;
+    font-family: 'Bebas Neue', cursive;
+
+    
+ 
+ }
+
+ .caixa-rank h1 {
+    margin-top: 15px;
+    color: red;
+    font-family: 'Rock Salt', cursive;
+ }
 
 .footer {
     margin: auto;
